RESOLVED FIXED155459
REGRESSION (r191691): Can't Share Selected Text
https://bugs.webkit.org/show_bug.cgi?id=155459
Summary REGRESSION (r191691): Can't Share Selected Text
Anders Carlsson
Reported 2016-03-14 13:47:57 PDT
REGRESSION (r191691): Can't Share Selected Text
Attachments
Patch (1.43 KB, patch)
2016-03-14 13:48 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2016-03-14 13:48:44 PDT
Anders Carlsson
Comment 2 2016-03-14 13:54:01 PDT
Note You need to log in before you can comment on or make changes to this bug.