REGRESSION (r191691): Can't Share Selected Text https://bugs.webkit.org/show_bug.cgi?id=155459 rdar://problem/24893625

Reviewed by Tim Horton.

Add the selected text as well. Somehow this got lost in the refactoring.

* UIProcess/mac/WebContextMenuProxyMac.mm:
(WebKit::WebContextMenuProxyMac::createShareMenuItem):

Canonical link: https://commits.webkit.org/173569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198153 268f45cc-cd09-0410-ab3c-d52691b4dbfc